--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-
+<div class="row">
 <div class="col-4 ">
     <ul class="list-group">
         <li class="list-group-item text-center"><strong>Ingredients [for {{recipe.servings}} servings]</strong></li>
@@ -46,5 +46,5 @@
     {{recipe.directions|safe}}
 
 </div>
-
+</div>
 {% endblock %}
