--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -4,18 +4,40 @@
 {% block content %}
 <br>
 {% load static %}
-    {% for prod in products %}
-    <div class="col-mb-5">
-        <div class="card mb-3 mr-3" style="max-width: 540px;">
+<div class="row">
+  <div class="col">
+<nav>
+  <div class="nav nav-tabs nav-fill nav-justified" id="nav-tab" role="tablist">
+    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">All</a>
+    {% for category in foodcategories %}
+      <a class="nav-item nav-link" id="nav-{{category.slug}}-tab" data-toggle="tab" href="#nav-{{category.slug}}" role="tab" aria-controls="nav-{{category}}" aria-selected="false">{{category}}</a>
+    {% endfor %}
+  </div>
+</nav>
+  </div>
+</div>
+<!--TERRIBLY WET SECTION! DRY IT ASAP! -->
+
+
+<div class="tab-content" id="nav-tabContent">
+
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+    <div class="row">
+      {% for prod in products %}
+    <div class="col-mb-5"> <!-- mx-auto looks better but breaks symmetry in last row, consider when multiple ingredients -->
+        <div class="card mb-3 mx-2" style="max-width: 540px;">
           <div class="row no-gutters">
+
             <div class="col-md-4">
               <img src="{% static prod.ingredient_image_src %}" class="card-img">
             </div>
+
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">{{prod.name}}</h5>
                 <p class="card-text">Calory value : {{ prod.calval}} cal/100g</p>
                 <p class="card-text"><small class="text-muted">Price: {{prod.price}} pln/kg</small></p>
+
                 <div class="container">
                   <div class="row">
                       {% if prod.name not in added %}
@@ -31,17 +53,67 @@
                       {% endif %}
                           <a href="{{prod.slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
                   </div>
+                </div>
+
               </div>
-                  </div>
             </div>
           </div>
         </div>
         </div>
     {% endfor %}
-    <div style="position:fixed; bottom:0; right:0; width:300px; border: 3px solid #73AD21;">
-        Here we will have some nice image of ingredient list:<br/>
-        {% for ing in added %}
-            </br><strong>{{ing}}</strong>
-        {% endfor %}
     </div>
+  </div>
+
+
+
+    {% for category in foodcategories %}
+  <div class="tab-pane fade" id="nav-{{category.slug}}" role="tabpanel" aria-labelledby="nav-{{category.slug}}-tab">
+    <!-- maybe some category info here, but better dont mess with it now -->
+      {% for prod in products %}
+        {% if prod.category == category %}
+        <div class="col-mb-5">
+            <div class="card mb-3 mx-2" style="max-width: 540px;">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img src="{% static prod.ingredient_image_src %}" class="card-img">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">{{prod.name}}</h5>
+                    <p class="card-text">Calory value : {{ prod.calval}} cal/100g</p>
+                    <p class="card-text"><small class="text-muted">Price: {{prod.price}} pln/kg</small></p>
+                    <div class="container">
+                      <div class="row">
+                          {% if prod.name not in added %}
+                          <form action="." method="post">{% csrf_token %}
+                              <button type="submit" class="btn btn-outline-success mr-2" name="add" value="added">Add to your recipe</button>
+                              <input type="hidden" name='ingredient' value="{{prod.name}}">
+                          </form>
+                          {% else %}
+                          <form action="." method="post">{% csrf_token %}
+                              <button type="submit" class="btn btn-outline-danger mr-2" name="delete" value="deleted">Delete from recipe</button>
+                              <input type="hidden" name='ingredient' value="{{prod.name}}">
+                          </form>
+                          {% endif %}
+                              <a href="{{prod.slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
+                      </div>
+                  </div>
+                      </div>
+                </div>
+              </div>
+            </div>
+            </div>
+        {% endif %}
+      {% endfor %}
+  </div>
+    {% endfor %}
+</div>
+</div>
+
+<div style="position:fixed; bottom:0; right:0; width:300px; border: 3px solid #73AD21;">
+  Here we will have some nice image of ingredient list:<br/>
+  {% for ing in added %}
+    </br><strong>{{ing}}</strong>
+  {% endfor %}
+</div>
 {% endblock %}
