Add recipies containig given ingredient and make comment model

--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -25,7 +25,7 @@
     <div class="row">
       {% for prod in products %}
     <div class="col-mb-5"> <!-- mx-auto looks better but breaks symmetry in last row, consider when multiple ingredients -->
-        <div class="card mb-3 mx-2" style="max-width: 540px;">
+        <div class="card mb-3 ml-3" style="max-width: 540px;">
           <div class="row no-gutters">
 
             <div class="col-md-4">
