--- a/main/templates/main/product_details.html
+++ b/main/templates/main/product_details.html
@@ -12,7 +12,9 @@
           <img src="{% static product.ingredient_image_src %}" class="img-fluid">
            <div class="collapse multi-collapse mt-1" id="multiCollapseExample1">
             <div class="card card-body">
-              HERE WE WILL HAVE SOME RECIPES QUERYSET
+              {% for recipe in recipes_containing %}
+              <a href="/recipes/{{recipe.recipe_slug}}">{{recipe.recipe_name}}</a>
+              {% endfor %}
             </div>
           </div>
         </div>
