--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -80,6 +80,34 @@
     return false;
     });
     </script>
+    <style>
+      html {
+      height: 100%;
+      box-sizing: border-box;
+      }
+      body {
+      position: relative;
+      margin: 0;
+      padding-bottom: 11rem;
+      min-height: 100%;
+      }
+
+      *,
+      *:before,
+      *:after {
+      box-sizing: inherit;
+      }
+
+      .footer {
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background-color: #5ce6a3;
+      padding: 1rem;
+      text-align: center;
+      }
+    </style>
   </head>
   <body>
 
@@ -95,6 +123,12 @@
                 {% endblock %}
 
 
+    </div>
+
+    <div class="footer">
+      <p>Jakub Wronka</p>
+      <p>wrokuj@gmail.com</p>
+      <p>+48 664 431 828</p>
     </div>
     <div>
         <script>
