--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,11 +1,12 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
+{% load crispy_forms_tags %}
 
     <div class="col-6 mx-auto mt-3">
         <form method="POST" action=".">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy}}
             <button type="submit" class="btn btn-primary mb-3">Login</button>
         </form>
             If you don't already have an account, <a href="/register"><strong>register </strong></a>for one.
