--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -39,6 +39,11 @@
         </li>
 
     </ul>
+    <br>
+    <ul class="list-group">
+        <li class="list-group-item text-center"><strong>Macronutrients profile</strong></li>
+        <li class="list-group-item"><canvas id="myChart" width="10" height="10"></canvas></li>
+    </ul>
 </div>
 
 <div class="col-8 ">
@@ -82,6 +87,45 @@
 
     </div>
 
+<script>
+var ctx = document.getElementById('myChart').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'doughnut',
+    data: {
+        labels: ['Carbs', 'Fats', 'Proteins'],
+        datasets: [{
+            label: 'g/100g',
+            data: {{nutrients}},
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
 
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        }
+    }
+});
+</script>
 </div>
 {% endblock %}
