--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -4,10 +4,12 @@
 {% load crispy_forms_tags %}
 
     <div class="col-6 mx-auto mt-3">
-        <form method="POST" action=".">
+        <form method="POST" action="">
             {% csrf_token %}
-            {{ form|crispy}}
+            {{ form|crispy }}
+
             <button type="submit" class="btn btn-primary mb-3">Login</button>
+            <input type="hidden" name="next" value="{% firstof request.GET.next '/' %}">
         </form>
             If you don't already have an account, <a href="/register"><strong>register </strong></a>for one.
     </div>
