--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -36,7 +36,7 @@
             <a class="btn btn-danger" href="/account">{{user.username}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/logout?next={% firstof request.path '/' %}">Logout</a>
           </li>
 
         {% else %}
@@ -46,7 +46,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/login?next={% firstof request.path '/' %}">Login</a>
           </li>
 
         {% endif %}
