--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -12,6 +12,40 @@
     </div>
 
 {% endif %}
+
+
+<form method="get" action="">
+    <div class="form-row mb-3">
+        <div class="col-1 mx-auto">
+            <strong>Order by:</strong>
+        </div>
+        <div class="col-4 mx-auto">
+            <select class="form-control" name="filter" id="filter">
+                <option value="recipe_posted">Date</option>
+                <option value="calories_per_serving">Calories</option>
+                <option value="price_per_serving">Price</option>
+            </select>
+        </div>
+        <div class="col-3 mx-auto">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="ord" id="desc" value="desc" {{desc}}>
+                <label class="form-check-label" for="desc">
+                Descending
+                </label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="ord" id="asc" value="asc" {{asc}}>
+                <label class="form-check-label" for="asc">
+                Ascending
+                </label>
+            </div>
+
+
+        </div>
+        <button type="submit" class="btn btn-outline-secondary mx-auto">Apply</button>
+    </div>
+</form>
+
 <div class="row">
     {% for recipe in recipes %}
 
@@ -23,10 +57,10 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">{{recipe.recipe_name}}</h5>
+                <h5 class="card-title">{{recipe.recipe_name}}</h5><small> {{recipe.recipe_posted}}</small>
                 <p class="card-text">Calory value : {{ recipe.calories_per_serving}} cal/serving</p>
                 <p class="card-text"><small class="text-muted">Price: {{recipe.price_per_serving}} pln/serving</small></p>
-                  <a href="{{recipe.recipe_slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
+                  <a href="/recipes/{{recipe.recipe_slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
                   {% if currentuser == recipe.user %}
                     <a href="{{recipe.recipe_slug}}/edit"><button type="button" class="btn btn-outline-info">Edit</button></a>
                   {% endif %}
@@ -37,4 +71,8 @@
     </div>
     {% endfor %}
 </div>
+<script>
+    let currently_picked = '{{ordered_by}}';
+    $('#filter').val(currently_picked);
+</script>
 {% endblock %}
