--- a/main/templates/main/account_details.html
+++ b/main/templates/main/account_details.html
@@ -1,7 +1,26 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-<div class="col-6 mx-auto">
-    <h1>Hi {{ user.username }}, this part is still tbc</h1>
+<div class="col-8 mx-auto">
+    <h1 class="text-center my-5">Summary of your activity</h1>
+    <div class="row">
+        <div class="col">
+            <div class="mb-3"><strong>Your recipes</strong></div>
+            <ul>
+            {% for recipe in recipes %}
+            <li><a href="/recipes/{{recipe.recipe_slug}}">{{recipe.recipe_name}}</a></li>
+            {% endfor %}
+            </ul>
+            </div>
+        <div class="col">
+            <div class="mb-3"><strong>Your comments</strong></div>
+            {% for comment in comments %}
+            <!-- create custom template tag to retrieve recipe slug for multi-word recipe tittles -->
+            <li><a href="/recipes/{{comment.recipe}}"><span class="text-muted">{{comment.created_on}} </span></a><br>
+                {{comment.content|truncatewords:15}}
+            </li>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
