--- a/main/templates/main/product_details.html
+++ b/main/templates/main/product_details.html
@@ -12,9 +12,12 @@
           <img src="{% static product.ingredient_image_src %}" class="img-fluid">
            <div class="collapse multi-collapse mt-1" id="multiCollapseExample1">
             <div class="card card-body">
+              <strong>Recipes containing {{product.name}}</strong><br>
+              <ul>
               {% for recipe in recipes_containing %}
-              <a href="/recipes/{{recipe.recipe_slug}}">{{recipe.recipe_name}}</a>
+              <li><a href="/recipes/{{recipe.recipe_slug}}">{{recipe.recipe_name}}</a></li>
               {% endfor %}
+              </ul>
             </div>
           </div>
         </div>
