--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -23,6 +23,7 @@
 
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
     <div class="row">
+        <div class="card-columns" style="column-count:2;">
       {% for prod in products %}
     <div class="col-mb-5"> <!-- mx-auto looks better but breaks symmetry in last row, consider when multiple ingredients -->
         <div class="card mb-3 ml-3" style="max-width: 540px;">
@@ -61,6 +62,7 @@
         </div>
         </div>
     {% endfor %}
+        </div>
     </div>
   </div>
 
@@ -69,6 +71,7 @@
     {% for category in foodcategories %}
   <div class="tab-pane fade" id="nav-{{category.slug}}" role="tabpanel" aria-labelledby="nav-{{category.slug}}-tab">
     <!-- maybe some category info here, but better dont mess with it now -->
+      <div class="card-columns" style="column-count:2;">
       {% for prod in products %}
         {% if prod.category == category %}
         <div class="col-mb-5">
@@ -105,12 +108,13 @@
             </div>
         {% endif %}
       {% endfor %}
+      </div>
   </div>
     {% endfor %}
 </div>
 </div>
 
-<div style="position:fixed; bottom:0; right:0; width:300px; border: 3px solid #73AD21;">
+<div style="position:fixed; bottom:0; right:0; width:300px; border: 3px solid #73AD21; z-index:100;">
   Here we will have some nice image of ingredient list:<br/>
   {% for ing in added %}
     </br><strong>{{ing}}</strong>
