--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="col-8 ">
-    <img src="{{recipe.recipe_image.url}}" class="img-fluid" >
+    <img src="{{recipe.recipe_image.url}}" class="img-fluid mx-auto d-block" >
     <h1>{{recipe.recipe_name}}</h1><small> {{recipe.recipe_posted}}</small>
 
     {{recipe.directions|safe}}
