--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -39,7 +39,7 @@
                 Ascending
                 </label>
             </div>
-
+        <input type="hidden" name="q" value="{{query}}">
 
         </div>
         <button type="submit" class="btn btn-outline-secondary mx-auto">Apply</button>
