--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -29,17 +29,17 @@
         <div class="card mb-3 ml-3" style="max-width: 540px;">
           <div class="row no-gutters">
 
-            <div class="col-md-4">
+            <div class="col-md-4 my-auto">
               <img src="{% static prod.ingredient_image_src %}" class="card-img">
             </div>
 
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">{{prod.name}}</h5>
-                <p class="card-text">Calory value : {{ prod.calval}} cal/100g</p>
-                <p class="card-text"><small class="text-muted">Price: {{prod.price}} pln/kg</small></p>
+                <p class="card-text">Caloric value : {{ prod.calval}} cal/100g</p>
+                <p class="card-text mb-5"><small class="text-muted">Price: {{prod.price}} pln/kg</small></p>
 
-                <div class="container">
+                <div class="container" style="position:absolute; bottom:20px;">
                   <div class="row">
                       {% if prod.name not in added %}
                       <form action="." method="post">{% csrf_token %}
@@ -77,15 +77,15 @@
         <div class="col-mb-5">
             <div class="card mb-3 mx-2" style="max-width: 540px;">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-4 my-auto">
                   <img src="{% static prod.ingredient_image_src %}" class="card-img">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">{{prod.name}}</h5>
-                    <p class="card-text">Calory value : {{ prod.calval}} cal/100g</p>
-                    <p class="card-text"><small class="text-muted">Price: {{prod.price}} pln/kg</small></p>
-                    <div class="container">
+                    <p class="card-text">Caloric value : {{ prod.calval}} cal/100g</p>
+                    <p class="card-text mb-5"><small class="text-muted">Price: {{prod.price}} pln/kg</small></p>
+                    <div class="container" style="position:absolute; bottom:20px;">
                       <div class="row">
                           {% if prod.name not in added %}
                           <form action="." method="post">{% csrf_token %}
@@ -114,10 +114,27 @@
 </div>
 </div>
 
-<div style="position:fixed; bottom:0; right:0; width:300px; border: 3px solid #73AD21; z-index:100;">
-  Here we will have some nice image of ingredient list:<br/>
+{% if added %}
+<div style="position:fixed; bottom:10px; right:10px; width:370px; border: 3px solid #4e4e52; background-color: #7c8282; z-index:100;">
+    <h1 class="text-center">Ingredient list</h1><br/>
+    <ul>
   {% for ing in added %}
-    </br><strong>{{ing}}</strong>
+    <li><strong>{{ing}}</strong></li></br>
   {% endfor %}
+    </ul>
+    <div class="row no-gutters mb-2">
+        <div class="col ml-3 m-2">
+        <a href="/add-recipe"><button type="button" class="btn btn-success">Create recipe</button></a>
+        </div>
+        <div class="col m-2">
+        <a href="/search-by-ingredients/{{added|join:'&'}}"><button type="button" class="btn btn-info">Search for recipe</button></a>
+        </div>
+        <div class="col align-self-center m-2">
+        <form action="." method="post">{% csrf_token %}
+            <button type="submit" class="btn btn-danger" name="clear" value="cleared">Clear all</button>
+        </form>
+        </div>
+    </div>
 </div>
+{% endif %}
 {% endblock %}
