--- a/main/templates/main/product_details.html
+++ b/main/templates/main/product_details.html
@@ -9,7 +9,7 @@
 
       <div class="row">
         <div class="col-md-5">
-          <img src="{% static product.ingredient_image_src %}" class="img-fluid">
+          <img src="{{ product.image.url }}" class="img-fluid">
            <div class="collapse multi-collapse mt-1" id="multiCollapseExample1">
             <div class="card card-body">
               <strong>Recipes containing {{product.name}}</strong><br>
@@ -26,7 +26,7 @@
           <div class="row">
 
             <div class="col">
-              <h5 class="card-title">{{ product.name }}</h5>
+              <h3 class="card-title">{{ product.name }}</h3>
             </div>
             <div class="col">
               {% if product.name not in added %}
@@ -42,9 +42,10 @@
 
           </div>
 
-          <h6 class="card-subtitle mb-2 text-muted">Price: {{product.price}} pln/kg</h6>
-          <p class="card-text">Calory value : {{ product.calval}} cal/100g<br>
-          Below we will try to display some nutrional values with chart.js, hopefully by the end of the month
+          <p class="card-text mb-2 text-muted">Price : <b>{{product.price}}</b> pln/kg</p>
+          <p class="card-text text-muted">Caloric value : <b>{{ product.calval }}</b> cal/100g<br></p>
+          <p>
+            Add some content pls
           </p>
 
               <button class="btn btn-info mx-1 my-5" type="button" data-toggle="collapse" data-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample2">Browse recipies</button>
